--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -60,12 +60,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
-		<!-- <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
-        </dependency> -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.4.0.Final</version>
+		</dependency>
 		
 	</dependencies>
 
