--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "java.configuration.updateBuildConfiguration": "automatic",
     "spring-boot.ls.checkJVM": false,
-    "python.pythonPath": "C:\\Users\\Spriors\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
+    "python.pythonPath": "C:\\Users\\Billy\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
 }
