--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "bootstrap": "^3.4.1",
+    "geojson-dissolve": "^3.1.0",
     "leaflet": "^1.7.1",
+    "mapshaper": "^0.5.26",
+    "mapshaper-es": "^0.4.162",
     "plotly.js": "^1.57.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
