--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
     "java.configuration.updateBuildConfiguration": "automatic",
     "spring-boot.ls.checkJVM": false,
-    "python.pythonPath": "C:\\Users\\Billy\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
+    "python.pythonPath": "C:\\Users\\Billy\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
+    "files.exclude": {
+        "**/.classpath": true,
+        "**/.project": true,
+        "**/.settings": true,
+        "**/.factorypath": true
+    }
 }
